# radio-equipment-system

backend/: Cargo.toml
backend/src/: main.rs  model.rs  routes.rs  seed_db.rs  utils.rs
backend/src/models/: item_model.rs  location_model.rs  mod.rs  user_model.rs
backend/src/routes/: auth.rs  items.rs  locations.rs  mod.rs
