[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
log = "0.4.20"
mongodb = "2.6.1"
tokio = {version = "1.32.0", features = ["full"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
futures = "0.3.28"
bcrypt = "0.15"
branca = "0.10.1"